@@ -26,23 +26,24 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
+import java.util.Locale;
+
 import org.junit.Test;
 
 import com.rgi.android.common.coordinate.CoordinateReferenceSystem;
 
 /**
  * @author Jenifer Cochran
+ * @author Mary Carome
  *
  */
-@SuppressWarnings("static-method")
+@SuppressWarnings({"unused", "static-method"})
 public class CoordinateReferenceSystemTest
 {
-
     /**
      * Tests if CoordinateReferenceSystem throws an IllegalArgumentException
      * when a parameter is null or empty
      */
-    @SuppressWarnings("unused")
     @Test(expected = IllegalArgumentException.class)
     public void illegalArgumentException()
     {
@@ -54,12 +55,35 @@ public class CoordinateReferenceSystemTest
      * Tests if CoordinateReferenceSystem throws an IllegalArgumentException
      * when a parameter is null or empty
      */
-    @SuppressWarnings("unused")
     @Test(expected = IllegalArgumentException.class)
     public void illegalArgumentException2()
     {
         new CoordinateReferenceSystem("", 123);
         fail("Expected CoordinateReferenceSystem to throw an IllegalArgumentException when given a null or empty paramter");
+    }
+
+    /**
+     * Tests if CoordinateReferenceSystem throws an IllegalArgumentException
+     * when a parameter is null or empty
+     */
+    @Test(expected = IllegalArgumentException.class)
+    public void illegalArgumentException3()
+    {
+        new CoordinateReferenceSystem("", "test", 123);
+        fail("Expected CoordinateReferenceSystem to throw an IllegalArgumentException when given a null or empty paramter");
+    }
+
+    /**
+     * Tests that toString returns the correct string
+     */
+    @Test
+    public void testToString()
+    {
+        final String name = "bob";
+        final String authority = "RGI";
+        final int id = 123;
+        final CoordinateReferenceSystem crs = new CoordinateReferenceSystem(name, authority, id);
+        assertTrue("CoordinateReferenceSysemt method toString() did not return expected string", crs.toString().equals(String.format("%s:%d - %s", authority, id, name)));
     }
 
     /**
@@ -70,9 +94,7 @@ public class CoordinateReferenceSystemTest
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
         final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem(crs1.getAuthority(), crs1.getIdentifier());
-        assertEquals(String.format("The equals method returned false when it should have returned true. CrsCompared: %s, %s.",
-                                   crs1.toString(), crs2.toString()),
-                     crs1, crs2);
+        assertEquals(String.format("The equals method returned false when it should have returned true. CrsCompared: %s, %s.", crs1.toString(), crs2.toString()), crs1, crs2);
     }
 
     /**
@@ -83,9 +105,7 @@ public class CoordinateReferenceSystemTest
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
         final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem("Different Authority", crs1.getIdentifier());
-        assertTrue(String.format("The equals method returned true when it should have returned false. CrsCompared: %s, %s.",
-                                   crs1.toString(), crs2.toString()),
-                     !crs1.equals(crs2));
+        assertTrue(String.format("The equals method returned true when it should have returned false. CrsCompared: %s, %s.", crs1.toString(), crs2.toString()), !crs1.equals(crs2));
     }
 
     /**
@@ -96,9 +116,7 @@ public class CoordinateReferenceSystemTest
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
         final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem(crs1.getAuthority(), 888);
-        assertTrue(String.format("The equals method returned true when it should have returned false. CrsCompared: %s, %s.",
-                                   crs1.toString(), crs2.toString()),
-                     !crs1.equals(crs2));
+        assertTrue(String.format("The equals method returned true when it should have returned false. CrsCompared: %s, %s.", crs1.toString(), crs2.toString()), !crs1.equals(crs2));
     }
 
     /**
@@ -108,8 +126,7 @@ public class CoordinateReferenceSystemTest
     public void equalsTest4()
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
-        assertTrue("The equals method returned true when it should have returned false.",
-                   !crs1.equals(null));
+        assertTrue("The equals method returned true when it should have returned false.", !crs1.equals(null));
     }
 
     /**
@@ -119,10 +136,10 @@ public class CoordinateReferenceSystemTest
     public void equalsTest5()
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
-        final Double differentObject = new Double(291.2);
-        assertTrue("The equals method returned true when it should have returned false.",
-                   !crs1.equals(differentObject));
+        final Double differentObject = Double.valueOf(291.2);
+        assertTrue("The equals method returned true when it should have returned false.", !crs1.equals(differentObject));
     }
+
     /**
      * Tests if the hashCode function returns the values expected
      */
@@ -131,9 +148,7 @@ public class CoordinateReferenceSystemTest
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
         final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem(crs1.getAuthority(), crs1.getIdentifier());
-        assertEquals(String.format("The hashcode method returned different values when it should have returned the same hashCode. Crs's hashCodes Compared: %d, %d.",
-                                   crs1.hashCode(), crs2.hashCode()),
-                     crs1.hashCode(), crs2.hashCode());
+        assertEquals(String.format(Locale.getDefault(), "The hashcode method returned different values when it should have returned the same hashCode. Crs's hashCodes Compared: %d, %d.", crs1.hashCode(), crs2.hashCode()), crs1.hashCode(), crs2.hashCode());
     }
 
     /**
@@ -144,8 +159,52 @@ public class CoordinateReferenceSystemTest
     {
         final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
         final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem("different authority", crs1.getIdentifier());
-        assertTrue(String.format("The hashcode method returned same value when it should have returned different hashCodes. Crs's hashCodes Compared: %d, %d.",
-                                   crs1.hashCode(), crs2.hashCode()),
-                     crs1.hashCode() != crs2.hashCode());
+        assertTrue(String.format(Locale.getDefault(), "The hashcode method returned same value when it should have returned different hashCodes. Crs's hashCodes Compared: %d, %d.", crs1.hashCode(), crs2.hashCode()), crs1.hashCode() != crs2.hashCode());
+    }
+
+    /**
+     * Tests compareTo throws a NullPointerException when given an null
+     * parameter
+     */
+    @Test(expected = NullPointerException.class)
+    public void testCompareTo1()
+    {
+        final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
+        final CoordinateReferenceSystem crs2 = null;
+        crs1.compareTo(crs2);
+        fail("Expected CoordinateReferenceSystem method compareTo to throw a NullPointerException when given a null parameter");
+    }
+
+    /**
+     * Tests compareTo when the authorities are different
+     */
+    @Test
+    public void testCompareTo2()
+    {
+        final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
+        final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem("Different authority", 123);
+        assertTrue("Expected CoordinateReferenceSystem method compareTo to return a nonzero integer.", crs1.compareTo(crs2) != 0);
+    }
+
+    /**
+     * Tests compareTo when the identifiers are different
+     */
+    @Test
+    public void testCompareTo3()
+    {
+        final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
+        final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem("Authority", 123);
+        assertTrue("Expected CoordinateReferenceSystem method compareTo to return a nonzero integer.", crs1.compareTo(crs2) != 0);
+    }
+
+    /**
+     * Tests compareTo when the CoordinateReferenceSystems are the same
+     */
+    @Test
+    public void testCompareTo4()
+    {
+        final CoordinateReferenceSystem crs1 = new CoordinateReferenceSystem("Authority", 555);
+        final CoordinateReferenceSystem crs2 = new CoordinateReferenceSystem("Authority", 555);
+        assertTrue("Expected CoordinateReferenceSystem method comparTo to return a nonzero integer.", crs1.compareTo(crs2) == 0);
     }
 }
